# pangolin

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Containerfile  Containerfile.agent  Containerfile.bash  Containerfile.egress  Containerfile.llm  Containerfile.software  LICENSE  PLAN.md  README.md  modes.yml  pyproject.toml
.github/workflows/: agent-cycle.yml  agent-software.yml  build-agent-images.yml
docs/: SECURITY_TARGET.md  THREAT_MODEL.md  deploy-prompt.md  research-agent.md  software-agent.md  writing-agent.md
scripts/: validate-output.sh
src/pangolin/: __init__.py  canary.py  classify.py  cli.py  core.py  egress_icap.py  egress_inspector.py  modes.py  orchestrate.py  pangolin_egress.py  paths.py  pr_feedback.py  providers.py  scaffold.py  software.py  tools.py
src/pangolin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pangolin/default_config/: modes.yml  validate_output.sh  wiki_schema.md
src/pangolin/default_config/claude/skills/canary-update/: SKILL.md
src/pangolin/default_config/docs/: inbox-summary.md  inbox-triage.md  research-search-agent.md  research-summarise-agent.md  self-improve.md  software-agent.md  thinking-agent.md  wiki-ingest.md  writing-agent.md
src/pangolin/default_config/wiki/: index.md  log.md
src/pangolin/default_config/workflows/: agent-cycle.yml  agent-software.yml
src/sandburg/: __init__.py  cli.py  paths.py  scaffold.py
src/sandburg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_canary.py  test_egress_inspector.py  test_pr_feedback.py  test_pr_feedback_classify.py  test_security.py  test_software.py
